--- a/app/src/main/res/layout/activity_operario_homepage.xml
+++ b/app/src/main/res/layout/activity_operario_homepage.xml
@@ -113,7 +113,7 @@
         android:textAllCaps="true"
         android:textSize="10dp"
         app:layout_constraintTop_toBottomOf="@id/saudacao_operario_name"
-        app:layout_constraintEnd_toEndOf="@id/container_ordensdeservico"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewMinhasOrdensDeServico"
         android:layout_marginLeft="290dp"
         android:layout_marginTop="20dp"
 
@@ -122,19 +122,15 @@
 
 
 
-
-
-
-    <View
-        android:id="@+id/container_ordensdeservico"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMinhasOrdensDeServico"
         android:layout_width="match_parent"
         android:layout_height="230dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/minhasordensdeservico"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="20dp"
-
         />
 
 
@@ -146,7 +142,7 @@
         android:textSize="20dp"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/container_ordensdeservico"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewMinhasOrdensDeServico"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
 
@@ -162,7 +158,7 @@
         android:textAllCaps="true"
         android:textSize="10dp"
         app:layout_constraintTop_toTopOf="@+id/ordensdeservico"
-        app:layout_constraintEnd_toEndOf="@id/container_ordensdeservico"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewOrdemDeServicoEmAberto"
         android:layout_marginLeft="290dp"
         android:layout_marginTop="-15dp"
 
@@ -171,23 +167,16 @@
 
 
 
-
-
-
-
-
-    <View
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewOrdemDeServicoEmAberto"
         android:layout_width="match_parent"
         android:layout_height="230dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ordensdeservico"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="20dp"
-
-        />
-
-
+/>
 
 
 
