--- a/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
@@ -114,17 +114,22 @@
 
                 />
 
-        <Spinner
-            android:id="@+id/campusSpinner"
-            style="@style/spinner"
-            android:layout_width="200dp"
+        <EditText
+            android:id="@+id/ediTextCampus"
+            style="@style/editText"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:layout_marginEnd="10dp"
-            android:textAppearance="@style/SpinnerTextStyle"
-
-
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="5dp"
+            android:hint=""
+            android:inputType="text"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/campus_textview" />
+
+
+
 
     </LinearLayout>
 
@@ -148,18 +153,19 @@
 
 
         />
-        <Spinner
-            android:id="@+id/PredioSpinner"
-            android:textAppearance="@style/SpinnerTextStyle"
-            android:layout_width="200dp"
+        <EditText
+            android:id="@+id/ediTextPredio"
+            style="@style/editText"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
-            app:layout_constraintStart_toStartOf="@id/campusSpinner"
-            app:layout_constraintBottom_toBottomOf="@id/campusSpinner"
-            style="@style/spinner"
-
-
-
-            />
+            android:layout_marginLeft="38dp"
+            android:layout_marginTop="5dp"
+            android:hint=""
+            android:inputType="text"
+            android:textColor="#000000"
+            android:textColorHint="#000000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/campus_textview" />
 
 
     </LinearLayout>
