--- a/app/src/main/res/layout/activity_cadastro_operario.xml
+++ b/app/src/main/res/layout/activity_cadastro_operario.xml
@@ -183,11 +183,11 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSalvarCadastro"
         style="@style/Button_yellow"
-        android:onClick="atualizarCadastroOperario"
+        android:onClick="atualizarCadastro"
         android:text="Atualizar"
-        app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextPassword2"
 
         />
 
