--- a/app/src/main/res/layout/activity_operario_redirecionar.xml
+++ b/app/src/main/res/layout/activity_operario_redirecionar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OperarioRedirecionar" android:background="@color/blue">
+    tools:context=".operario.OperarioRedirecionar" android:background="@color/blue">
 
 
 
