--- a/app/src/main/res/layout/activity_usuario_homepage.xml
+++ b/app/src/main/res/layout/activity_usuario_homepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomepageUsuario"
+    tools:context=".usuario.HomepageUsuario"
     android:background="@color/blue"
 
     >
